# thelashop-to-shopify

./: README.md  converter.py  data_transformation.ipynb  main.py  pyproject.toml  requirements.txt  scraper.py  shopifyapi.py
