[project]
name = "thelashop-to-shopify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb==1.1.2",
    "httpx==0.27.2",
    "jupyterlab==4.3.0",
    "pandas==2.2.3",
    "python-dotenv==1.1.0",
    "selectolax==0.3.25",
]
